--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,12 @@
   <name>carstore Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
-
   <dependencies>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.1.214</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
@@ -30,22 +34,12 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
-
   </dependencies>
-
 
   <build>
     <finalName>carstore</finalName>
-    <plugins>
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.2.2</version>
-        <configuration>
-          <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
-          <warSourceDirectory>src/main/webapp</warSourceDirectory>
-        </configuration>
-      </plugin>
 
+    <plugins>
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
         <artifactId>tomcat7-maven-plugin</artifactId>
@@ -66,6 +60,18 @@
           </execution>
         </executions>
       </plugin>
+
+
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.2.2</version>
+        <configuration>
+          <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
+          <warSourceDirectory>src/main/webapp</warSourceDirectory>
+        </configuration>
+      </plugin>
+
     </plugins>
+
   </build>
 </project>
